newsminer.com (archived on 2009-06-16)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education;newsandmedia",
  "char_count": 4994,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.3,
  "homepage_snapshot_redirected_domain": "newsminer.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090407055323id_/http://www.newsminer.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090407055323id_/http%3A//newsminer.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "newsminer.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616063714id_/http%3A//www.newsminer.com/privacy",
  "policy_title": "newsminer.com \u2022 Privacy policy",
  "policy_url": "newsminer.com/privacy",
  "sha1": "27ac1cf45326fcf3962d0339f3db2eb3daba80a5",
  "simhash": 10012267851269360168,
  "simhash_updated": false,
  "site_hostname": "newsminer.com",
  "site_url": "http://newsminer.com",
  "smog": 15.47,
  "strict_updated": false,
  "timestamp": "20090616063714",
  "word_count": 805,
  "year": 2009
}

--- a/n/ne/new/newsminer.com.html
+++ b/n/ne/new/newsminer.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the newsminer.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216043020id_/http%3A//newsminer.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the newsminer.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616063714id_/http%3A//www.newsminer.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,34 +16,123 @@
 	
 	
 	
-		<script language="JavaScript" type="text/javascript" src="http://extras.mnginteractive.com/live/js/tacoda/DartInclude.js"></script>
-		<script type="text/javascript" src="http://media.newsminer.com/js/fdnm.js"></script>
-		<script type="text/javascript">
-		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-		document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-		</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
-		<script type="text/javascript">
-		var pageTracker = _gat._getTracker("UA-375478-1");
-		pageTracker._initData();
-		pageTracker._trackPageview();
-		</script>
-		
-		<script type="text/javascript"><!--//--><![CDATA[//><!--
-		sfHover = function() {
-			var sfEls = document.getElementById("drop").getElementsByTagName("LI");
-			for (var i=0; i<sfEls.length; i++) {
-				sfEls[i].onmouseover=function() {
-					this.className+=" sfhover";
-				}
-				sfEls[i].onmouseout=function() {
-					this.className=this.className.replace(new RegExp(" sfhover\\b"), "");
+	<!--YAHOO ADS--><script type="text/javascript" language="JavaScript">
+		//General Information
+		yld_mgr = {};
+		yld_mgr.slots = {};
+		yld_mgr.pub_id="20948585578";
+		yld_mgr.site_name="www.newsminer.com";
+		yld_mgr.container_type="js";
+		yld_mgr.request_type="ac";	
+		yld_mgr.clk_dest="_blank";
+		yld_mgr.ad_output_encoding="utf-8";
+		yld_mgr.max_count=3;	
+		yld_mgr.content_lang="en-US";
+		yld_mgr.disable_content_send="0";
+		yld_mgr.cstm_sctn_list=["section"];  // section or article
+		yld_mgr.content_topic_id_list=["20275001"]; //Currently configured for news - adjust for content based on NCtaxIDs.xls spreadsheet		      
+		var sectionKeywords = [""]; //Custom Content Category - max 10 variables, lower case, comma separated, must start with a letter, accepted characters a-z and 0-9 EXAMPLE - "rockiesbaseball","coorsfield"
+		var content_type_list = ["fn_news"];	
+		var reporting_tag_list = ["News"];  //This is the section name
+
+		//Ad slot configs  - Remove slots that are not used on the page and the corresponding DIV tag       		
+
+			//Above the Fold 728x90						                		
+			yld_mgr.slots.adPos0={};
+			yld_mgr.slots.adPos0.ad_size_list=["728x90"];
+			yld_mgr.slots.adPos0.ad_delivery_mode="ipatf";
+			yld_mgr.slots.adPos0.ad_format_list=["Standard Graphical","Rich Media"];
+			yld_mgr.slots.adPos0.cstm_content_cat_list=sectionKeywords;
+			yld_mgr.slots.adPos0.content_type_list=content_type_list;
+			yld_mgr.slots.adPos0.reporting_tag_list=reporting_tag_list;
+
+			//Above the Fold 300x100												
+			yld_mgr.slots.adPos1={};
+			yld_mgr.slots.adPos1.ad_size_list=["300x100"];
+			yld_mgr.slots.adPos1.ad_delivery_mode="ipatf";
+			yld_mgr.slots.adPos1.ad_format_list=["Standard Graphical","Rich Media"];
+			yld_mgr.slots.adPos1.cstm_content_cat_list=sectionKeywords;
+			yld_mgr.slots.adPos1.content_type_list=content_type_list;
+			yld_mgr.slots.adPos1.reporting_tag_list=reporting_tag_list;
+
+			//Above the Fold 300x250										
+			yld_mgr.slots.adPos9={};
+			yld_mgr.slots.adPos9.ad_size_list=["300x250"];
+			yld_mgr.slots.adPos9.ad_delivery_mode="ipatf";
+			yld_mgr.slots.adPos9.ad_format_list=["Standard Graphical","Rich Media"];
+			yld_mgr.slots.adPos9.cstm_content_cat_list=sectionKeywords;
+			yld_mgr.slots.adPos9.content_type_list=content_type_list;
+			yld_mgr.slots.adPos9.reporting_tag_list=reporting_tag_list;
+
+			//Spans the Fold 125x125																			
+			yld_mgr.slots.adPos4={};
+			yld_mgr.slots.adPos4.ad_size_list=["125x125"];
+			yld_mgr.slots.adPos4.ad_delivery_mode="ipstf";
+			yld_mgr.slots.adPos4.ad_format_list=["Standard Graphical","Rich Media"];
+			yld_mgr.slots.adPos4.cstm_content_cat_list=sectionKeywords;
+			yld_mgr.slots.adPos4.content_type_list=content_type_list;
+			yld_mgr.slots.adPos4.reporting_tag_list=reporting_tag_list;
+
+			//Below the Fold 125x125																		
+			yld_mgr.slots.adPos5={};
+			yld_mgr.slots.adPos5.ad_size_list=["125x125"];
+			yld_mgr.slots.adPos5.ad_delivery_mode="ipbtf";
+			yld_mgr.slots.adPos5.ad_format_list=["Standard Graphical","Rich Media"];
+			yld_mgr.slots.adPos5.cstm_content_cat_list=sectionKeywords;
+			yld_mgr.slots.adPos5.content_type_list=content_type_list;
+			yld_mgr.slots.adPos5.reporting_tag_list=reporting_tag_list;
+
+			//Above the Fold 160x600														
+			yld_mgr.slots.adPos10={};
+			yld_mgr.slots.adPos10.ad_size_list=["160x600"];
+			yld_mgr.slots.adPos10.ad_delivery_mode="ipatf";
+			yld_mgr.slots.adPos10.ad_format_list=["Standard Graphical","Rich Media"];
+			yld_mgr.slots.adPos10.cstm_content_cat_list=sectionKeywords;
+			yld_mgr.slots.adPos10.content_type_list=content_type_list;
+			yld_mgr.slots.adPos10.reporting_tag_list=reporting_tag_list;	
+
+			//Below the Fold 728x90														
+			yld_mgr.slots.adPos14={};
+			yld_mgr.slots.adPos14.ad_size_list=["728x90"];
+			yld_mgr.slots.adPos14.ad_delivery_mode="ipbtf";
+			yld_mgr.slots.adPos14.ad_format_list=["Standard Graphical","Rich Media"];
+			yld_mgr.slots.adPos14.cstm_content_cat_list=sectionKeywords;
+			yld_mgr.slots.adPos14.content_type_list=content_type_list;
+			yld_mgr.slots.adPos14.reporting_tag_list=reporting_tag_list;
+
+			</script><script type="text/javascript" language="JavaScript" src="http://e.yieldmanager.net/script.js"></script>
+			
+			
+			
+			<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-375478-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
+			
+			
+			
+
+			<script type="text/javascript"><!--//--><![CDATA[//><!--
+			sfHover = function() {
+				var sfEls = document.getElementById("drop").getElementsByTagName("LI");
+				for (var i=0; i<sfEls.length; i++) {
+					sfEls[i].onmouseover=function() {
+						this.className+=" sfhover";
+					}
+					sfEls[i].onmouseout=function() {
+						this.className=this.className.replace(new RegExp(" sfhover\\b"), "");
+					}
 				}
 			}
-		}
-		if (window.attachEvent) window.attachEvent("onload", sfHover);
+			if (window.attachEvent) window.attachEvent("onload", sfHover);
 
 
-		//--><!]]></script>
+			//--><!]]></script>
 		
 	
 	
@@ -81,7 +170,6 @@
 		<ul>
 			<li><a href="/news/today/">Today's News</a></li>
 			<li><a href="/news/local/">Local News</a></li>
-			<li><a href="/news/special/general_election_2008/">2008 General Election</a></li>
 			<li><a href="/news/palin/">Sarah Palin</a></li>
 			<li><a href="/news/special/stevens/">Ted Stevens</a></li>
 			<li><a href="/news/dermotcole/">Dermot Cole</a></li>
@@ -100,15 +188,14 @@
 			<li><a href="/news/opinion/letters/">Letters to the Editor</a></li>
 			<li><a href="/news/opinion/community/">Community Perspectives</a></li>
 			<li><a href="/photos/galleries/editorial-cartoons/">Editorial Cartoons</a></li>
-			<li><a href="/photos/galleries/editoons/">Editoons by Eric Troyer</a></li>
 		</ul>
 	</li>
 	<li class="nav-list-item"><a href="/news/sports">Sports</a>
 		<ul>
 			<li><a href="/news/sports/">Local Sports</a></li>
 			<li><a href="/news/nanooks/">UAF Nanooks</a></li>
-			<li><a href="/news/yukon_quest/">Yukon Quest</a></li>
-			<li><a href="/news/Iditarod_2008/">Iditarod</a></li>
+			<li><a href="/news/yukon_quest2009/">Yukon Quest</a></li>
+			<li><a href="/news/Iditarod/">Iditarod</a></li>
 			<li><a href="http://hosted.ap.org/dynamic/fronts/NASCAR05?SITE=AKFAI&amp;SECTION=HOME">NASCAR</a></li>
 			<li><a href="http://hosted.ap.org/dynamic/fronts/COLLEGEBASKETBALL_25?SITE=AKFAI&amp;SECTION=HOME">College Hoops</a></li>
 			<li><a href="http://hosted.ap.org/dynamic/fronts/FOOTBALL?SITE=AKFAI&amp;SECTION=HOME">NFL</a></li>
@@ -141,22 +228,31 @@
 	</li>
 	<li class="nav-list-item"><a href="http://classifieds.newsminer.com">Classifieds</a>
 		<ul>
-			<li><a href="http://homes.newsminer.com">Homes</a></li>
-			<li><a href="http://newsminerextra.com/homes/rentals.php">Rentals</a></li>
+			<li><a href="http://classifieds.newsminer.com/browse/browse.php?pid=9&amp;page=1&amp;sort=">Aircraft &amp; Boats</a></li>
+			<li><a href="http://classifieds.newsminer.com/browse/browse.php?pid=1&amp;page=1&amp;sort=">Announcements</a></li>
+			<li><a href="http://classifieds.newsminer.com/browse/browse.php?pid=10&amp;page=1&amp;sort=">Automotive</a></li>
+			<li><a href="http://classifieds.newsminer.com/browse/browse.php?pid=2&amp;page=1&amp;sort=">Employment </a></li>
+			<li><a href="http://classifieds.newsminer.com/browse/browse.php?pid=3&amp;page=1&amp;sort=">Financial</a></li>
+			<li><a href="http://classifieds.newsminer.com/browse/browse.php?pid=8&amp;page=1&amp;sort=">General Merchandise</a></li>
+			<li><a href="http://classifieds.newsminer.com/browse/browse.php?pid=7&amp;page=1&amp;sort=">Livestock &amp; Pets</a></li>
+			<li><a href="http://classifieds.newsminer.com/browse/browse.php?pid=5&amp;page=1&amp;sort=">Real Estate </a></li>
+			<li><a href="http://classifieds.newsminer.com/browse/index.php?pid=11">Services</a></li>
+			<li><a href="http://classifieds.newsminer.com/browse/browse.php?pid=6&amp;page=1&amp;sort=">Rentals </a></li>
+			<li><a href="http://homes.newsminer.com">Featured Homes</a></li>
+			<li><a href="http://newsminerextra.com/homes/rentals.php">Featured Rentals</a></li>
 			<li><a href="http://newsminerextra.com/homes/commercial.php">Commercial Property</a></li>
 			<li><a href="http://newsminerextra.com/homes/land.php">Land Sales</a></li>
-			<li><a href="http://classifieds.newsminer.com/?class=10010">Automotive</a></li>
+			
 		</ul>
 	</li>
 	<li class="nav-list-item"><a href="/contest/">Contests</a>
-		<ul>
-			<li><a href="http://newsminer.profootball.upickem.net/profootball/football/games.asp">Pigskin Prophets</a></li>
-			<li><a href="http://newsminer.com/contest/gingerbreadhouse/">Gingerbread House Contest</a></li>
-			<li><a href="http://newsminer.upickem.net/engine/Welcome.aspx?contestid=4153">Christmas Lights Photo Contest</a></li>
-			<li><a href="http://newsminer.com/contest/christmas_card/">Christmas Card Contest</a></li>
-			<li><a href="http://newsminer.com/contest/200giftcertificate/">Gift Certificate Giveaway</a></li>
-			<li><a href="http://newsminer.com/contest/ornament/">Green Ornament</a></li>
-		</ul>
+	<ul>
+		<li><a href="http://newsminer.golf.upickem.net/golf/registration/login.asp">Golf Challenge</a></li>
+		<li><a href="http://newsminer.autoracing.upickem.net/autoracing/registration/login.asp">Auto Racing Contest</a></li>
+		<li><a href="http://newsminer.upickem.net/engine/Welcome.aspx?contestid=6959">Blind Boys of Alabama Ticket Giveaway</a></li>
+		<li><a href="http://newsminer.upickem.net/engine/Welcome.aspx?contestid=7098">Puddle of Mud</a></li>
+		<li><a href="http://newsminer.upickem.net/engine/Welcome.aspx?contestid=7215">Chippendales</a></li>
+	</ul>
 	</li>
 	<li class="nav-list-item"><a href="/multimedia/">Multimedia</a>
 		<ul>
@@ -170,7 +266,7 @@
 		
 		
 		<ul>
-			<li><a href="/weblogs/dermot-cole/">Dermot Cole</a></li><li><a href="/weblogs/editors-desk/">Rod Boyce: The editor's desk</a></li><li><a href="/weblogs/strong-side/">Strong Side</a></li><li><a href="/weblogs/alaska-military-news/">Alaska Military News</a></li><li><a href="/weblogs/offbeat-fairbanks/">Offbeat Fairbanks</a></li><li><a href="/weblogs/interior-blogroll/">Interior Blogroll</a></li>
+			<li><a href="/weblogs/dermot-cole/">Dermot Cole</a></li><li><a href="/weblogs/editors-desk/">Rod Boyce: The editor's desk</a></li><li><a href="/weblogs/capital-focus/">Capital Focus</a></li><li><a href="/weblogs/strong-side/">Strong Side</a></li><li><a href="/weblogs/offbeat-fairbanks/">Offbeat Fairbanks</a></li><li><a href="/weblogs/interior-blogroll/">Interior Blogroll</a></li><li><a href="/weblogs/fairbanks-beer-blog/">Fairbanks Beer Blog</a></li><li><a href="/weblogs/alaska-video-gamer/">Alaska Video Gamer</a></li><li><a href="/weblogs/alaska-gardening-roundtable/">Alaska Gardening Roundtable</a></li>
 		</ul>
 	</li>
 </ul>
@@ -251,44 +347,40 @@
 </div>
 
 <div id="sidebar">
-	
-	<!-- 300x250 ad size -->
 	<div class="sidebar_ads">
-<div align="center" class="adElement"><script type="text/javascript" language="JavaScript1.1">GetAd('tile','9','/ros_section','','www.newsminer.com','','300','250');</script>
-	</div>
-	<!-- End 300x250 ad size -->
-	
-	<iframe style="padding:0;margin:0" src="http://newsminerextra.com/homes/includes/ad.php" id="homes_ad" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" vspace="0" hspace="0" width="300" height:100%=""></iframe>
-	
-	<!-- 300x100 ad size -->
-	<div align="center" class="adElement">
-	<script type="text/javascript" language="JavaScript1.1">GetAd('tile','8','/ros_section','','www.newsminer.com','','300','250');</script>
+		<!-- 300x250 ad size -->
+		<!-- 300x250 Above the Fold APT -->														
+		<div style="center" class="adElement" id="adPosition9"><script type="text/javascript" language="JavaScript">yld_mgr.place_ad_here("adPos9");</script>
 		</div>
-	<!-- End 300x100 ad size -->
+		<!-- End 300x250 ad size -->
 	
-	<!-- google analytics? -->
-	<div id="small-box-ad-left">
-	<script type="text/javascript">
-		if (!document.phpAds_used) document.phpAds_used = ',';
-		phpAds_random = new String (Math.random()); phpAds_random = phpAds_random.substring(2,11);
-		document.write ("<" + "script type=\"text/javascript\" src=\"");
-		document.write ("http://ads.newsminer.com/adjs.php?n=" + phpAds_random);
-		document.write ("&amp;what=zone:41&amp;block=1");
-		document.write ("&amp;exclude=" + document.phpAds_used);
-		if (document.referrer)
-			document.write ("&amp;referer=" + escape(document.referrer));
-		document.write ("\"><" + "/script>");
-	</script><script type="text/javascript" src="http://ads.newsminer.com/adjs.php?n=734272791&amp;what=zone:41&amp;block=1&amp;exclude=,"></script>
-	</div>
+		<iframe style="padding:0;margin:0" src="http://newsminerextra.com/homes/includes/ad.php" id="homes_ad" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" vspace="0" hspace="0" width="300" height:100%="">
+		</iframe>
+	
+		<!-- 300x100 ad size -->
+		<!-- 300x100 Above the Fold APT-->														
+		<div style="center" class="adElement" id="adPosition1"><script type="text/javascript" language="JavaScript">yld_mgr.place_ad_here("adPos1");</script>
+		</div>
+		<!-- End 300x100 ad size -->
+	
+		<!-- this is where google analytics was located -->
+		<div id="small-box-ad-left">
+			<div style="center" class="adElement" id="adPosition5"><script type="text/javascript" language="JavaScript">yld_mgr.place_ad_here("adPos5");</script>
+		</div>
+		<!-- 125x125 APT Below the Fold APT-->														
+		<div style="center" class="adElement" id="adPosition4"><script type="text/javascript" language="JavaScript">yld_mgr.place_ad_here("adPos4");</script>
+		</div>
+		</div>
 	<!-- End google analytics? -->
 	
 	<!-- 125x125 ad right -->
 	<div id="small-box-ad-right">
-		<div align="center" class="adElement"><script type="text/javascript" language="JavaScript1.1">GetAd('tile','7','/ros_section','','www.newsminer.com','','125','125');</script>
+	<!-- 125x125 Below the Fold APT -->														
+		<div style="center" class="adElement" id="adPosition5"><script type="text/javascript" language="JavaScript">yld_mgr.place_ad_here("adPos5");</script>
 		</div>
 	</div>
 </div>
-	<!-- End 125x125 ad right -->
+
 
 </div>
 
@@ -299,9 +391,9 @@
 		
 		
 		<div class="banner-ad bottom-banner-ad">
-				<div align="center" class="adElement"><script type="text/javascript" language="JavaScript1.1">GetAd('tile','14','/ros_section','','www.newsminer.com','','728','90');</script></div>
+			<div style="center" class="adElement" id="adPosition14"><script type="text/javascript" language="JavaScript">yld_mgr.place_ad_here("adPos14");</script>
+			</div>
 		</div>
-		
 		
 		
 		<div id="extra-content">
@@ -314,7 +406,7 @@
 
 	<div id="footer">
 		
-		All site content © 2008 Fairbanks Daily News-Miner. All rights reserved. Member of <a href="http://www.centro.net/realcities/"><img src="http://media.newsminer.com/images/realcities.gif"></a>
+		All site content © 2009 Fairbanks Daily News-Miner. All rights reserved. Member of <a href="http://www.centro.net/realcities/"><img src="http://media.newsminer.com/images/realcities.gif"></a>
 		
 	</div>
 	
@@ -353,6 +445,7 @@
 			<a href="/contact/">Contact</a> /
 			<a href="/rss/">Feeds</a> /
 			<a href="http://twitter.com/newsminer">Twitter</a> /
+			<a href="http://www.youtube.com/user/newsminer">YouTube</a> /
 			<a href="/bookstore/">Bookstore</a>
 		</dd>
 		<dt>Submit</dt>
@@ -367,11 +460,6 @@
 	</dl>
 </div>
 
-<div style="font-size:1px;color:#7298b6;">
-<a href="http://verticentricdesign.com/" style="text-decoration:none;color:#7298b6;">Alaska Web design</a>
-by
-<a href="http://verticentricdesign.com/" style="text-decoration:none;color:#7298b6;">Verticentric Design</a>
-</div>
 
 
 
