--- a/s/se/sel/selector.com.html
+++ b/s/se/sel/selector.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the selector.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216072105id_/http%3A//www.selector.com/general/legal_notices/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the selector.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616063753id_/http%3A//www.selector.com/general/legal_notices/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -59,6 +59,7 @@
 			<a title="Legal Notices" href="/general/legal_notices" class="topbar">Legal Notices</a-->
 		</td>
 		<td class="topnav_new" align="right">
+			<a href="#" onclick="javascript:newWindow=openWin500NEW('http://selector.list-manage.com/subscribe?u=bdcec915e7727f398039a05c9&amp;id=25f1905558','550')" class="topbar">Subscribe to newsletter</a> | 
 			<a title="Add your products" href="/general/rate_card" class="topbar_sell">Advertise your products</a>
 		</td>
 	</tr>
@@ -78,7 +79,7 @@
 					<td width="13"><img src="http://www.selector.com/images/search_arrow.gif" alt="" height="35" width="13" border="0"></td>
 					<td class="newtop_middle"><input type="text" name="keyword" value="Enter a keyword" onfocus="if (this.value == 'Enter a keyword') {this.value='';}; return true;" class="searchformstypenew" size="20"><input type="hidden" value="keyword" name="action">
 						<input type="hidden" value="search" name="type">
-						<input type="submit" value="Search" class="searchformsnew">&nbsp; or&nbsp; <input type="button" onclick="document.location ='/category/';" class="searchformsnew" value="Browse Categories">&nbsp; or&nbsp; <input type="button" onclick="document.location ='/index.php?type=search&amp;action=new&amp;keyword=new&amp;r=174602' " class="searchformsnew" value="View New Listings"></td>				
+						<input type="submit" value="Search" class="searchformsnew">&nbsp; or&nbsp; <input type="button" onclick="document.location ='/category/';" class="searchformsnew" value="Browse Categories">&nbsp; or&nbsp; <input type="button" onclick="document.location ='/index.php?type=search&amp;action=new&amp;keyword=new&amp;r=155943' " class="searchformsnew" value="View New Listings"></td>				
 					<td class="newtop_userdetails"><b>Guest</b><br>					<!--td valign="top" align="right"-->
 						<table border="0" cellspacing="0" cellpadding="0">
 							<tbody><tr>
@@ -119,17 +120,16 @@
 		<div class="sidead">
 		  <div style="line-height:1.4em;">
 		<div style="clear:left;">
-	<a href="/handbook/paypal/" title="Architects Handbook 2008/09"><img src="/images/handbook/AH0809COVER50W.GIF" alt="Architects Handbook 2008/09" border="0" style="float:left;margin-right:10px;margin-bottom:5px;width:50px;">
-<b>2008/2009<br>
-			Handbook has<br>
-			arrived!<br>
-			Order Now<br>
-			
+	<a href="/handbook/paypal/" title="Architects Handbook 2008/09"><img src="/images/enews/BANNERS/HANDBOOK_09_50.PNG" alt="Architects Handbook 2009/10" border="0" style="float:left;margin-right:10px;margin-bottom:5px;width:50px;">
+<b>NEW 2009/10<br>
+Handbook is<br>
+coming soon!<br>
+Order Now<br>
 &amp; SAVE</b></a><br>
 	<ul style="margin:0;margin-left:5px;padding-left:1em;">
-      <li>Available NOW!</li>
+      <li>Available 1 July 2009</li>
       <li>Order online, SAVE $3</li>
-      <li>Find out more <a href="/handbook/info/" title="Architects Handbook 2008/09">click here</a></li>
+      <li>Find out more <a href="/handbook/info/" title="Architects Handbook 2009/10">click here</a></li>
   	</ul>
   </div>		  </div>
 </div>
@@ -216,13 +216,14 @@
 <!--FOOTER start-->
 <tr><td colspan="2" bgcolor="#FFFFFF" align="center" width="800" height="20" class="footer"><table width="100%" border="0" cellspacing="0" cellpadding="2">
 	<tbody><tr>
-		<td class="footer">Copyright © 1996-2008 Architecture Media Pty Ltd</td>
+		<td class="footer">Copyright © 1996-2009 Architecture Media Pty Ltd</td>
 		<td class="footer" align="right"><a href="/general/legal_notices/terms_of_use" class="footer">Terms of Use</a> | <a href="/general/legal_notices/privacy" class="footer">Privacy Policy</a> | <a href="/general/legal_notices/disclaimer" class="footer">Disclaimer</a> | <a href="/general/legal_notices/copyright" class="footer">Copyright</a></td>
 	</tr>
 </tbody></table></td></tr>
 <!--FOOTER end-->
 </tbody></table>
 </center>
+<script src="http://www.selector.com/js/gatag.js" type="text/javascript"></script> 
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www."); document.write("\<script src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'>\<\/script>" ); 
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script> 
