--- a/s/so/soc/sockdreams.com.html
+++ b/s/so/soc/sockdreams.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sockdreams.com privacy policy that was archived on 2008-06-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080609113559id_/http%3A//www.sockdreams.com/_shop/edit/default_privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sockdreams.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616064002id_/http%3A//www.sockdreams.com/_shop/edit/default_privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="en"><!-- InstanceBegin template="/Templates/Default.dwt.php" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="doctitle" -->
@@ -122,7 +122,7 @@ Should you have other questions or concerns about these privacy policies, please
 
 	<option value="44">Latest Products</option>
 	<option value="2">Acrylic</option>
-		<option value="81">Alpaca</option>
+		<option value="121">Alpaca</option>
 		<option value="3">Angora</option>
 		<option value="5">Argyle</option>
 		<option value="110">B.ella</option>
@@ -140,17 +140,13 @@ Should you have other questions or concerns about these privacy policies, please
 		<option value="87">Coolmax</option>
 		<option value="11">Cotton</option>
 		<option value="66">Crinoline</option>
-		<option value="12">Criss Cross</option>
 		<option value="108">Cuban Heel</option>
-		<option value="13">Double Lace</option>
 		<option value="113">Eco-friendly</option>
+		<option value="119">Elastic Free</option>
 		<option value="14">Fence Net</option>
 		<option value="15">Fishnet</option>
-		<option value="76">Fleece</option>
 		<option value="78">Flowers</option>
-		<option value="90">Foot rings</option>
 		<option value="16">Footless</option>
-		<option value="70">French cut</option>
 		<option value="82">Furry</option>
 		<option value="17">Fuzzy</option>
 		<option value="94">Gift Cards</option>
@@ -159,28 +155,29 @@ Should you have other questions or concerns about these privacy policies, please
 		<option value="115">Gold</option>
 		<option value="56">Halloween</option>
 		<option value="18">Hemp</option>
+		<option value="117">Joker socks</option>
 		<option value="75">Kids</option>
 		<option value="19">Lace</option>
 		<option value="63">Lace up</option>
+		<option value="122">Larger Feet</option>
 		<option value="106">Lightweight</option>
 		<option value="21">Low Rise</option>
 		<option value="60">Lycra</option>
 		<option value="61">Made in the USA</option>
 		<option value="51">Men</option>
+		<option value="120">Merino</option>
 		<option value="107">midweight</option>
-		<option value="104">Modal</option>
 		<option value="84">Mohair</option>
 		<option value="77">Neon</option>
+		<option value="118">Novelty</option>
 		<option value="24">Nylon</option>
 		<option value="25">Opaque</option>
-		<option value="86">Open heel</option>
 		<option value="102">Organic</option>
 		<option value="92">Panties</option>
 		<option value="98">Pirates</option>
 		<option value="58">Plaid</option>
 		<option value="26">Plus Sized</option>
 		<option value="27">Polka Dots</option>
-		<option value="28">Pothole</option>
 		<option value="29">Prints</option>
 		<option value="30">Rainbow</option>
 		<option value="45">Rayon</option>
@@ -192,7 +189,6 @@ Should you have other questions or concerns about these privacy policies, please
 		<option value="33">Sheer</option>
 		<option value="111">Silk</option>
 		<option value="34">Silver</option>
-		<option value="35">Skins</option>
 		<option value="72">Skulls</option>
 		<option value="59">Slippers</option>
 		<option value="48">Slouch</option>
@@ -214,7 +210,6 @@ Should you have other questions or concerns about these privacy policies, please
 		<option value="74">Toeless</option>
 		<option value="47">Toesocks</option>
 		<option value="49">Tube Style</option>
-		<option value="41">Tweed</option>
 		<option value="91">Two-Tone</option>
 		<option value="68">Tye Dyed</option>
 		<option value="52">Unisex</option>
@@ -224,7 +219,6 @@ Should you have other questions or concerns about these privacy policies, please
 		<option value="80">Warm!</option>
 		<option value="43">Wool</option>
 		<option value="46">Woven toe seam</option>
-		<option value="65">Zippers</option>
 		
 	</select>
 
@@ -237,12 +231,12 @@ Should you have other questions or concerns about these privacy policies, please
 </div>
 <!-- Footer -->
 <br><div class="MarginBottom"><div id="MainFooter">
-  <div class="FooterText"><a href="../edit/default_privacy.php" class="FooterText">Privacy Policy</a> | <a href="../edit/faq_index.php" class="FooterText">FAQ</a> | <a href="../edit/contact.php" class="FooterText">Contact Sock Dreams</a> | <a href="../edit/default_copyright.php" class="FooterText">2000 - 2008 © Sock Dreams</a><br>
+  <div class="FooterText"><a href="../edit/default_privacy.php" class="FooterText">Privacy Policy</a> | <a href="../edit/faq_index.php" class="FooterText">FAQ</a> | <a href="../edit/contact.php" class="FooterText">Contact Sock Dreams</a> | <a href="../edit/default_copyright.php" class="FooterText">2000 - 2009 © Sock Dreams</a><br>
       <a href="http://www.yummywakame.com" target="_blank" class="FooterText">Designed by Yummy Wakame</a> | <a href="http://www.micamedia.com" target="_blank" class="FooterText">Programmed by Mica Media</a></div>
 
 	 <div class="Footer_SCANALERT">
 	  <!-- START SCANALERT CODE -->
-		<a target="_blank" href="https://www.scanalert.com/RatingVerify?ref=www.sock-dreams.com"><img width="115" height="32" border="0" src="http://images.scanalert.com/meter/www.sock-dreams.com/12.gif" alt="McAfee Secure sites help keep you safe from identity theft, credit card fraud, spyware, spam, viruses and online scams" oncontextmenu="alert('Copying Prohibited by Law - McAfee Secure is a Trademark of McAfee, Inc.'); return false;"></a>
+		<a target="_blank" href="https://www.scanalert.com/RatingVerify?ref=www.sock-dreams.com"><img width="115" height="32" border="0" src="https://images.scanalert.com/meter/www.sock-dreams.com/12.gif" alt="McAfee Secure sites help keep you safe from identity theft, credit card fraud, spyware, spam, viruses and online scams" oncontextmenu="alert('Copying Prohibited by Law - McAfee Secure is a Trademark of McAfee, Inc.'); return false;"></a>
 		<!-- END SCANALERT CODE -->
 	</div>
 </div></div>
