--- a/s/sm/sma/smasharticles.com.html
+++ b/s/sm/sma/smasharticles.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the smasharticles.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216022715id_/http%3A//www.smasharticles.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the smasharticles.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616064716id_/http%3A//www.smasharticles.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Smash Articles</title>
@@ -75,9 +75,9 @@ google_color_url = "006699";
 									  <td style="width:124" align="center"><a href="http://www.smasharticles.com" title="Smash Articles">Smash Articles</a></td>
 										<td align="center" style="width:18"><span style="color:#C64747"> |</span></td>			  
 									  <td style="width:95" align="center"><a href="http://www.smasharticles.com/smashebooks.html" title="Smash Ebooks">Smash Ebooks</a></td>
-										<td align="center" style="width:26"><span style="color:#C64747"> |</span></td>			  			  
-									  <td style="width:136" align="center"><a href="http://blog.smasharticles.com/" title="Smash Blog">Smash Blog</a></td>
-									  <td align="center" style="width:28"><span style="color:#C64747"> |</span></td>			  
+										  <td align="center" style="width:26"><span style="color:#C64747"> |</span></td>			  			  
+									<!--<td style="width:136" align="center"><a href="http://blog.smasharticles.com/" title="Smash Blog">Smash Blog</a></td> 
+									  <td align="center" style="width:28"><span style="color:#C64747"> |</span></td>			  -->
 									  
                       <td style="width:146" align="center"><a href="http://www.smasharticles.com/webdirectory/" title="Smash Web Directory">Smash Web Directory</a></td> 
 									 <td align="center" style="width:23"><span style="color:#C64747"> |</span></td>			  
@@ -109,67 +109,66 @@ google_color_url = "006699";
 			<tbody><tr>
 				
           <td width="150" valign="top" align="center"><table width="160">
-  <tbody><tr> 
-    <td align="center" valign="middle"> <strong>Articles</strong></td>
+  <tbody><tr>
+    <td align="center" valign="middle"><strong>Articles</strong></td>
   </tr>
-  <tr> 
+  <tr>
     <td valign="top"><hr style="color:#C64747;border-style:solid"></td>
   </tr>
-  <tr> 
+  <tr>
     <td align="center" valign="middle"><a href="http://www.smasharticles.com/submit/article.html" title="Submit your article">Submit 
       Your Article</a></td>
   </tr>
-  <tr> 
+  <tr>
     <td align="center" valign="middle"><a href="http://www.smasharticles.com/recentarticles.php" title="Latest articles">Latest 
       Articles</a></td>
   </tr>
-  <tr> 
+  <tr>
     <td align="center" valign="middle"><a href="http://www.smasharticles.com/populararticles.php" title="Popular Articles">Popular 
       Articles</a></td>
   </tr>
-  <tr> 
+  <tr>
     <td align="center" valign="middle"><a href="http://www.smasharticles.com/topratedarticles.php" title="Top Rated Articles">Top 
       Rated Articles</a></td>
   </tr>
-  <tr> 
+  <tr>
     <td align="center" valign="middle"><a href="http://www.smasharticles.com/articlesrss.php" title="RSS Feed for Articles"><img src="http://www.smasharticles.com/images/RSS.gif" alt="RSS Feed for Articles" style="border-style:none"></a>&nbsp;<a href="http://www.smasharticles.com/articles_ror.xml" title="ROR Feed for Articles"><img src="http://www.smasharticles.com/images/ror.gif" alt="ROR Feed for Articles" style="border-style:none"></a></td>
   </tr>
-  <tr> 
+  <tr>
     <td valign="top"><hr style="color:#C64747;border-style:solid"></td>
   </tr>
-  <tr> 
-    <td align="center" valign="middle"> <strong>Ebooks</strong></td>
+  <tr>
+    <td align="center" valign="middle"><strong>Ebooks</strong></td>
   </tr>
-  <tr> 
+  <tr>
     <td valign="top"><hr style="color:#C64747;border-style:solid"></td>
   </tr>
-  <tr> 
+  <tr>
     <td align="center" valign="middle"><a href="http://www.smasharticles.com/recentebooks.php" title="Latest Ebooks">Latest 
       Ebooks</a></td>
   </tr>
-  <tr> 
+  <tr>
     <td align="center" valign="middle"><a href="http://www.smasharticles.com/popularebooks.php" title="Popular Ebooks">Popular 
       Ebooks</a> </td>
   </tr>
-  <tr> 
+  <tr>
     <td align="center" valign="middle"><a href="http://www.smasharticles.com/topratedebooks.php" title="Top Rates Ebooks">Top 
       Rated Ebooks</a></td>
   </tr>
-  <tr> 
+  <tr>
     <td align="center" valign="middle"><a href="http://www.smasharticles.com/ebookauthors.php" title="Ebook Authors">Authors</a></td>
   </tr>
-  <tr> 
+  <tr>
     <td align="center" valign="middle"><a href="http://www.smasharticles.com/covergallery.php" title="Ebooks Cover Gallery">Cover 
       Gallery</a></td>
   </tr>
-  <tr> 
-    <td align="center" valign="middle"><a href="http://www.smasharticles.com/ebooksrss.php" title="RSS Feed for Ebooks"> 
-      <img src="http://www.smasharticles.com/images/RSS.gif" alt="RSS Feed for Ebooks" style="border-style:none"></a>&nbsp;<a href="http://www.smasharticles.com/ebooks_ror.xml" title="ROR Feed for Ebooks"><img src="http://www.smasharticles.com/images/ror.gif" alt="ROR Feed for Ebooks" style="border-style:none"></a></td>
+  <tr>
+    <td align="center" valign="middle"><a href="http://www.smasharticles.com/ebooksrss.php" title="RSS Feed for Ebooks"> <img src="http://www.smasharticles.com/images/RSS.gif" alt="RSS Feed for Ebooks" style="border-style:none"></a>&nbsp;<a href="http://www.smasharticles.com/ebooks_ror.xml" title="ROR Feed for Ebooks"><img src="http://www.smasharticles.com/images/ror.gif" alt="ROR Feed for Ebooks" style="border-style:none"></a></td>
   </tr>
-   <tr> 
+  <tr>
     <td valign="top"><hr style="color:#C64747;border-style:solid"></td>
   </tr>
-<!--  <tr> 
+  <!--  <tr> 
     <td align="center" valign="middle"> <strong>Donation</strong></td>
   </tr>
   <tr> 
@@ -187,53 +186,51 @@ google_color_url = "006699";
 	</form>
 	</td>
   </tr> -->
-  <tr> 
+  <tr>
     <td valign="top"><hr style="color:#C64747;border-style:solid"></td>
   </tr>
-  <tr> 
-    <td align="center" valign="middle"> <strong>Web Directory</strong></td>
+  <tr>
+    <td align="center" valign="middle"><strong>Web Directory</strong></td>
   </tr>
-  <tr> 
+  <tr>
     <td valign="top"><hr style="color:#C64747;border-style:solid"></td>
   </tr>
-  <tr> 
+  <tr>
     <td align="center" valign="middle"><a href="http://www.smasharticles.com/webdirectory/submit.php" title="Submit your website">Submit 
       Your Website</a></td>
   </tr>
-  
-  <tr> 
+  <tr>
     <td valign="top"><hr style="color:#C64747;border-style:solid"></td>
   </tr>
-   <tr> 
+  <tr>
     <td align="center" valign="middle"><a href="http://www.isedn.org" target="_blank"><img src="http://www.smasharticles.com/images/member_125x30_red.gif" border="0"></a></td>
   </tr>
-   <tr> 
+  <tr>
     <td valign="top"><hr style="color:#C64747;border-style:solid"></td>
   </tr>
-  <tr> 
+  <tr>
     <td align="center" valign="middle"><strong>Partner</strong></td>
   </tr>
-  <tr> 
+  <tr>
     <td valign="top"><hr style="color:#C64747;border-style:solid"></td>
   </tr>
-  <tr> 
+  <tr>
     <td align="center" valign="middle"><a href="http://e-articles.info/" target="_blank">Articles directory</a></td>
   </tr>
-    <tr> 
+  <tr>
     <td valign="top"><hr style="color:#C64747;border-style:solid"></td>
   </tr>
-  <tr> 
-    <td align="center" valign="middle"> <strong>Sign up for Newsletter</strong></td>
+  <tr>
+    <td align="center" valign="middle"><strong>Sign up for Newsletter</strong></td>
   </tr>
-  <tr> 
+  <tr>
     <td valign="top"><hr style="color:#C64747;border-style:solid"></td>
   </tr>
-  <tr> 
+  <tr>
     <td align="left" valign="middle"><strong>Email</strong></td>
   </tr>
   <tr>
-    <td align="center" valign="middle">
-			   <script type="text/javascript">
+    <td align="center" valign="middle"><script type="text/javascript">
 				function formsubmit()
 				{
 					if (document.frm.email.value.indexOf("@") && document.frm.email.value.indexOf(".") < 2) {
@@ -242,26 +239,25 @@ google_color_url = "006699";
 					return false;}
 				}
 				</script>
-		<form method="post" action="http://www.smasharticles.com/process.php" id="frm" onsubmit="return formsubmit();">
-			<input type="text" value="" class="txtbox" size="17" title="Enter your Email Address"> &nbsp; <input type="button" class="btn2" value="Go" title="Sign up for SmashArticles.com Newsletter"> <p></p>
-		</form>
-	</td>
+      <form method="post" action="http://www.smasharticles.com/process.php" id="frm" onsubmit="return formsubmit();">
+        <input type="text" value="" class="txtbox" size="15" title="Enter your Email Address">
+        &nbsp;
+        <input type="button" class="btn2" value="Go" title="Sign up for SmashArticles.com Newsletter">
+        <p></p>
+      </form></td>
   </tr>
   <tr>
-  	<td align="center">
-	
-	<script type="text/javascript"><!--
-	google_ad_client = "pub-1632718777606339";
-	google_ad_width = 125;
-	google_ad_height = 125;
-	google_ad_format = "125x125_as_rimg";
-	google_cpa_choice = "CAAQveKWhAIaCCMpKGCXSmopKJ_D93M";
-	google_ad_channel = "1470918100";
-	//-->
-	</script>
-	<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-	</script>
-	</td>
+    <td align="left"><script type="text/javascript"><!--
+						google_ad_client = "pub-1632718777606339";
+						/* 120x240, created 3/19/09 */
+						google_ad_slot = "9841625587";
+						google_ad_width = 150;
+						google_ad_height = 240;
+						//-->
+						</script>
+							  <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+						</script>
+    </td>
   </tr>
 </tbody></table>
 </td>
@@ -517,12 +513,7 @@ google_color_url = "006699";
             SmashArticles.com</span></td>
         </tr>
       </tbody></table>
-	  <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-_uacct = "UA-2252677-1";
-urchinTracker();
-</script> </td>
+ </td>
 </tr>
 </tbody></table>
 
