--- a/g/gr/gre/greydogsoftware.com.html
+++ b/g/gr/gre/greydogsoftware.com.html
@@ -1,18 +1,20 @@
-<!--The following is the downloaded HTML source of the greydogsoftware.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216011609id_/http%3A//www.greydogsoftware.com/index.php%3Fpage%3Dprivacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the greydogsoftware.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616064730id_/http%3A//www.greydogsoftware.com/index.php%3Fpage%3Dprivacy_policy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/main.dwt" codeOutsideHTMLIsLocked="false" --><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/main1.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <!-- InstanceBeginEditable name="doctitle" -->
 <title>Grey Dog Software</title>
 <!-- InstanceEndEditable -->
 <link href="/template.css" rel="stylesheet" type="text/css">
 <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
+
 <script language="JavaScript">
 <!--
 function mmLoadMenus() {
   if (window.mm_menu_0717153226_0) return;
-                                              window.mm_menu_0717153226_0_1 = new Menu("Bowl&nbsp;Bound&nbsp;College&nbsp;Football",75,16,"Arial, Helvetica, sans-serif",10,"#FFFFFF","#FFFFFF","#FF0000","#800000","left","middle",3,0,250,-5,7,true,false,true,0,true,true);
+
+window.mm_menu_0717153226_0_1 = new Menu("Bowl&nbsp;Bound&nbsp;College&nbsp;Football",75,16,"Arial, Helvetica, sans-serif",10,"#FFFFFF","#FFFFFF","#FF0000","#800000","left","middle",3,0,250,-5,7,true,false,true,0,true,true);
     mm_menu_0717153226_0_1.addMenuItem("Demo","location='../downloads.php?id=61'");
     mm_menu_0717153226_0_1.addMenuItem("Purchase","location='/bb/index.php?page=purchase'");
     mm_menu_0717153226_0_1.addMenuItem("Features","location='/bb/index.php?page=features'");
@@ -33,23 +35,40 @@ function mmLoadMenus() {
    mm_menu_0717153226_0.menuLiteBgColor='#FFFFFF';
    mm_menu_0717153226_0.menuBorderBgColor='#FFFFFF';
 
-window.mm_menu_0717154329_0_1 = new Menu
-("Fast&nbsp;Break&nbsp;Basketball",75,16,"Arial, Helvetica, sans-serif",10,"#FFFFFF","#FFFFFF","#FF0000","#800000","left","middle",3,0,250,-5,7,true,false,true,0,true,true);
-    mm_menu_0717154329_0_1.addMenuItem("Features","location='/fbb/index.php?page=features'");
-    mm_menu_0717154329_0_1.addMenuItem("Support","location='/forum'");
-     mm_menu_0717154329_0_1.hideOnMouseOut=true;
-     mm_menu_0717154329_0_1.bgColor='#FFFFFF';
-     mm_menu_0717154329_0_1.menuBorder=1;
-     mm_menu_0717154329_0_1.menuLiteBgColor='#FFFFFF';
-     mm_menu_0717154329_0_1.menuBorderBgColor='#FFFFFF';
-window.mm_menu_0717154329_0 = new Menu("root",202,16,"Arial, Helvetica, sans-serif",10,"#FFFFFF","#FFFFFF","#FF0000","#800000","left","middle",3,0,250,-5,7,true,false,true,0,true,true);
-  mm_menu_0717154329_0.addMenuItem(mm_menu_0717154329_0_1,"location='/fbb'");
-   mm_menu_0717154329_0.hideOnMouseOut=true;
-   mm_menu_0717154329_0.childMenuIcon="../images/arrows.gif";
-   mm_menu_0717154329_0.bgColor='#FFFFFF';
-   mm_menu_0717154329_0.menuBorder=1;
-   mm_menu_0717154329_0.menuLiteBgColor='#FFFFFF';
-   mm_menu_0717154329_0.menuBorderBgColor='#FFFFFF';
+window.mm_menu_0717155509_0_7 = new Menu("World&nbsp;of&nbsp;Mixed&nbsp;Martial&nbsp;Arts&nbsp;2",75,16,"Arial, Helvetica, sans-serif",10,"#FFFFFF","#FFFFFF","#FF0000","#800000","left","middle",3,0,250,-5,7,true,false,true,0,true,true);
+    mm_menu_0717155509_0_7.addMenuItem("Demo","location='../downloads.php?id=82'");    
+    mm_menu_0717155509_0_7.addMenuItem("Features","location='/wmma2/index.php?page=features'");
+    mm_menu_0717155509_0_7.addMenuItem("Purchase","location='/wmma2/index.php?page=purchase'");
+    mm_menu_0717155509_0_7.addMenuItem("Screens","location='/wmma2/index.php?page=screens'");
+    mm_menu_0717155509_0_7.addMenuItem("Support","location='/forum'");
+    mm_menu_0717155509_0_7.addMenuItem("System Reqs","location='/wmma2/index.php?page=system_req'");
+     mm_menu_0717155509_0_7.hideOnMouseOut=true;
+     mm_menu_0717155509_0_7.bgColor='#FFFFFF';
+     mm_menu_0717155509_0_7.menuBorder=1;
+     mm_menu_0717155509_0_7.menuLiteBgColor='#FFFFFF';
+     mm_menu_0717155509_0_7.menuBorderBgColor='#FFFFFF';
+window.mm_menu_0717155509_0_5 = new Menu("World&nbsp;of&nbsp;Mixed&nbsp;Martial&nbsp;Arts",75,16,"Arial, Helvetica, sans-serif",10,"#FFFFFF","#FFFFFF","#FF0000","#800000","left","middle",3,0,250,-5,7,true,false,true,0,true,true);
+    mm_menu_0717155509_0_5.addMenuItem("Demo","location='downloads.php?id=73'");
+    mm_menu_0717155509_0_5.addMenuItem("Features","location='/wmma/index.php?page=features'");
+    mm_menu_0717155509_0_5.addMenuItem("Purchase","location='/wmma/index.php?page=purchase'");
+    mm_menu_0717155509_0_5.addMenuItem("Screens","location='/wmma/index.php?page=screens'");
+    mm_menu_0717155509_0_5.addMenuItem("Support","location='/wmma/index.php?page=downloads'");
+    mm_menu_0717155509_0_5.addMenuItem("System Reqs","location='/wmma/index.php?page=system_req'");
+     mm_menu_0717155509_0_5.hideOnMouseOut=true;
+     mm_menu_0717155509_0_5.bgColor='#FFFFFF';
+     mm_menu_0717155509_0_5.menuBorder=1;
+     mm_menu_0717155509_0_5.menuLiteBgColor='#FFFFFF';
+     mm_menu_0717155509_0_5.menuBorderBgColor='#FFFFFF';
+
+window.mm_menu_0717155509_0 = new Menu("root",202,16,"Arial, Helvetica, sans-serif",10,"#FFFFFF","#FFFFFF","#FF0000","#800000","left","middle",3,0,250,-5,7,true,false,true,0,true,true);
+  mm_menu_0717155509_0.addMenuItem(mm_menu_0717155509_0_7,"location='/wmma2'");
+  mm_menu_0717155509_0.addMenuItem(mm_menu_0717155509_0_5,"location='/wmma'");
+   mm_menu_0717155509_0.hideOnMouseOut=true;
+   mm_menu_0717155509_0.childMenuIcon="../images/arrows.gif";
+   mm_menu_0717155509_0.bgColor='#FFFFFF';
+   mm_menu_0717155509_0.menuBorder=1;
+   mm_menu_0717155509_0.menuLiteBgColor='#FFFFFF';
+   mm_menu_0717155509_0.menuBorderBgColor='#FFFFFF';
                       
 window.mm_menu_0717155309_0_6 = new Menu("Total&nbsp;Extreme&nbsp;Wrestling&nbsp;2008",75,16,"Arial, Helvetica, sans-serif",10,"#FFFFFF","#FFFFFF","#FF0000","#800000","left","middle",3,0,250,-5,7,true,false,true,0,true,true);
     mm_menu_0717155309_0_6.addMenuItem("CornellVerse","location='/cornellverse/index.html'");
@@ -64,18 +83,6 @@ window.mm_menu_0717155309_0_6 = new Menu("Total&nbsp;Extreme&nbsp;Wrestling&nbsp
      mm_menu_0717155309_0_6.menuBorder=1;
      mm_menu_0717155309_0_6.menuLiteBgColor='#FFFFFF';
      mm_menu_0717155309_0_6.menuBorderBgColor='#FFFFFF';
-window.mm_menu_0717155309_0_5 = new Menu("World&nbsp;of&nbsp;Mixed&nbsp;Martial&nbsp;Arts",75,16,"Arial, Helvetica, sans-serif",10,"#FFFFFF","#FFFFFF","#FF0000","#800000","left","middle",3,0,250,-5,7,true,false,true,0,true,true);
-    mm_menu_0717155309_0_5.addMenuItem("Demo","location='downloads.php?id=73'");
-    mm_menu_0717155309_0_5.addMenuItem("Features","location='/wmma/index.php?page=features'");
-    mm_menu_0717155309_0_5.addMenuItem("Purchase","location='/wmma/index.php?page=purchase'");
-    mm_menu_0717155309_0_5.addMenuItem("Screens","location='/wmma/index.php?page=screens'");
-    mm_menu_0717155309_0_5.addMenuItem("Support","location='/wmma/index.php?page=downloads'");
-    mm_menu_0717155309_0_5.addMenuItem("System Reqs","location='/wmma/index.php?page=system_req'");
-     mm_menu_0717155309_0_5.hideOnMouseOut=true;
-     mm_menu_0717155309_0_5.bgColor='#FFFFFF';
-     mm_menu_0717155309_0_5.menuBorder=1;
-     mm_menu_0717155309_0_5.menuLiteBgColor='#FFFFFF';
-     mm_menu_0717155309_0_5.menuBorderBgColor='#FFFFFF';
 window.mm_menu_0717155309_0_1 = new Menu("Total&nbsp;Extreme&nbsp;Wrestling&nbsp;2007",75,16,"Arial, Helvetica, sans-serif",10,"#FFFFFF","#FFFFFF","#FF0000","#800000","left","middle",3,0,250,-5,7,true,false,true,0,true,true);
     mm_menu_0717155309_0_1.addMenuItem("CornellVerse","location='/cornellverse/index.html'");
     mm_menu_0717155309_0_1.addMenuItem("Demo","location='../downloads.php?id=66'");
@@ -128,7 +135,6 @@ window.mm_menu_0717155309_0_1 = new Menu("Total&nbsp;Extreme&nbsp;Wrestling&nbsp
 
   window.mm_menu_0717155309_0 = new Menu("root",202,16,"Arial, Helvetica, sans-serif",10,"#FFFFFF","#FFFFFF","#FF0000","#800000","left","middle",3,0,250,-5,7,true,false,true,0,true,true);
   mm_menu_0717155309_0.addMenuItem(mm_menu_0717155309_0_6,"location='/tew2008'");  
-  mm_menu_0717155309_0.addMenuItem(mm_menu_0717155309_0_5,"location='/wmma'");
   mm_menu_0717155309_0.addMenuItem(mm_menu_0717155309_0_1,"location='/tew2'");
   mm_menu_0717155309_0.addMenuItem(mm_menu_0717155309_0_2,"location='/ws2'");
   mm_menu_0717155309_0.addMenuItem(mm_menu_0717155309_0_3,"location='/tew'");
@@ -146,59 +152,62 @@ mm_menu_0717155309_0.writeMenus();
 </script>
 <script src="/Scripts/AC_RunActiveContent.js" type="text/javascript"></script>
 <script language="JavaScript" src="/mm_menu.js"></script>
-
+<!-- InstanceParam name="basketball" type="boolean" value="false" --><!-- InstanceParam name="football" type="boolean" value="true" --><!-- InstanceParam name="wrestling" type="boolean" value="false" -->
 </head>
 
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
-<span class="style1">
 <script language="JavaScript1.2">mmLoadMenus();</script>
-</span>
 <table width="828" border="0" cellspacing="0" cellpadding="0">
   <tbody><tr>
-    <td class="style1"><a href="/home.php"><img src="/images/topheader.gif" width="828" height="49" border="0"></a></td>
+    <td><a href="/home.php"><img src="/images/topheader.gif" width="828" height="49" border="0"></a></td>
   </tr>
 </tbody></table>
-<table width="828" border="0" cellpadding="0" cellspacing="0" bgcolor="#676670">
+
+<table width="828" border="0" cellpadding="0" cellspacing="0">
+
   <tbody><tr>
     <td width="194" valign="top" background="images/newstable_bg1.gif"><script type="text/javascript">
 AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0','width','193','height','547','title','nav','src','/images/main_navigation','quality','high','pluginspage','http://www.macromedia.com/go/getflashplayer','movie','/images/main_navigation' ); //end AC code
     </script>
-      <noscript>
-      <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0" width="193" height="547" title="nav">
-        <param name="movie" value="/images/main_navigation.swf" />
-        <param name="quality" value="high" />
-        <embed src="/images/main_navigation.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" width="193" height="547"></embed>
-      </object>
-      </noscript>
-      <table width="193" border="0" cellspacing="0" cellpadding="0">
-      <tbody><tr>
-        <td width="194"><table width="100%" border="0" cellspacing="0" cellpadding="0">
+        <noscript>
+        <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0" width="193" height="547" title="nav">
+          <param name="movie" value="/images/main_navigation.swf" />
+          <param name="quality" value="high" />
+          <embed src="/images/main_navigation.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" width="193" height="547"></embed>
+        </object>
+        </noscript>
+        <table width="193" border="0" cellspacing="0" cellpadding="0">
           <tbody><tr>
-            <td colspan="2"><img src="images/newsletter_signup.gif" width="193" height="60"></td>
-            </tr>
-          <tr>
-            <td width="4%">&nbsp;</td>
-            <td width="89%" valign="middle"><form action="/index.php?page=newsletter_results" method="post">
-              <input type="text" size="30" name="email">
-              <br>
-              Format:
+            <td width="194"><table width="100%" border="0" cellspacing="0" cellpadding="0">
+                <tbody><tr background="../images/newsletter_signup.gif">
+                  <td colspan="2"></td>
+                </tr>
+                <tr>
+                  <td colspan="2"><img src="../images/newsletter_signup.gif" width="193" height="60"></td>
+                </tr>
+                <tr>
+                  <td width="4%">&nbsp;</td>
+                  <td width="89%" valign="middle"><form action="/index.php?page=newsletter_results" method="post">
+                    <input type="text" size="30" name="email">
+                    <br>
+                    Format:
   <input type="radio" value="html" name="format">
-              HTML
+                    HTML
   <input type="radio" value="text" name="format">
-              Text<br>
+                    Text<br>
   <input name="submit" type="submit" value="Submit">
-            </form></td>
-            </tr>
-          <tr>
-            <td>&nbsp;</td>
-            <td><img src="images/spacer.gif" width="49" height="21"></td>
-            </tr>
-        </tbody></table>          </td>
-      </tr>
+                  </form></td>
+                </tr>
+                <tr>
+                  <td>&nbsp;</td>
+                  <td><img src="../images/spacer.gif" width="49" height="21"></td>
+                </tr>
+            </tbody></table></td>
+          </tr>
     </tbody></table></td>
     <td width="634" valign="top" class="content_bg"><table width="634" border="0" align="right" cellpadding="0" cellspacing="0">
       <tbody><tr>
-        <td><img src="/images/topnav.gif" name="image1" width="635" height="32" border="0" usemap="#Map" id="image1">
+        <td><img src="/images/topnavhomeb.jpg" name="image1" width="634" height="32" border="0" usemap="#Map" id="image1">
           <table width="100%" height="100%" border="0" cellpadding="0">
             <tbody><tr>
               <td valign="top"><table width="95%" border="0" align="center" cellpadding="0" cellspacing="0">
@@ -232,7 +241,7 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
 <p class="style1">&nbsp;</p>
 <table width="828" border="0" cellspacing="0" cellpadding="0">
   <tbody><tr>
-    <td background="/images/footer_bg.gif" class="style1"><table width="100%" border="0" cellspacing="0" cellpadding="0">
+    <td background="/images/footer_bg.gif"><table width="100%" border="0" cellspacing="0" cellpadding="0">
       <tbody><tr>
         <td width="22%"><img src="/images/spacer.gif" width="200" height="36"></td>
         <td width="75%" class="btnlinks"><a href="index.php?page=legal_notices" class="btnlinks">Legal Notice </a> | <a href="index.php?page=privacy_policy" class="btnlinks">Privacy Policy</a> | <a href="mailto:webmaster@greydogsoftware.com" class="btnlinks">Email Webmaster</a> | <a href="index.php?page=rss" class="btnlinks">RSS Feed</a><span class="btnlinks">       <img src="/images/rss.gif" width="14" height="14" align="top"> <span class="btnlinks"><strong>Copyright © 2006 Grey Dog Software.</strong></span></span></td>
@@ -243,17 +252,14 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
 </tbody></table>
 <table width="828" border="0" cellspacing="0" cellpadding="0">
   <tbody><tr>
-    <td class="style1"><div align="center"><br>
+    <td><div align="center"><br>
       <a href="http://virtualatlantic.com"><img src="/images/vai_logo.gif" width="268" height="17" border="0"></a></div></td>
   </tr>
 </tbody></table>
-<span class="style1">
 <map name="Map" id="Map">
-  <area shape="poly" coords="270,1,299,29,391,29,363,1" href="/bb" onmouseover="MM_showMenu(window.mm_menu_0717153226_0,300,32,null,'image1')" onmouseout="MM_startTimeout();">
-  <area shape="poly" coords="367,1,396,29,505,29,475,1" href="/fbb" onmouseover="MM_showMenu(window.mm_menu_0717154329_0,395,32,null,'image1')" onmouseout="MM_startTimeout();">
-  <area shape="poly" coords="480,1,508,29,612,29,579,1" href="/tew2" onmouseover="MM_showMenu(window.mm_menu_0717155309_0,508,32,null,'image1')" onmouseout="MM_startTimeout();">
+  <area shape="poly" coords="450,1,488,29,569,29,560,1" href="/tew2008" onmouseover="MM_showMenu(window.mm_menu_0717155309_0,487,32,null,'image1')" onmouseout="MM_startTimeout();">
+<area shape="poly" coords="561,1,570,29,662,29,655,1" href="/wmma2" onmouseover="MM_showMenu(window.mm_menu_0717155509_0,590,32,null,'image1')" onmouseout="MM_startTimeout();">
+  <area shape="poly" coords="250,1,278,29,361,29,353,1" href="/bb" onmouseover="MM_showMenu(window.mm_menu_0717153226_0,280,32,null,'image1')" onmouseout="MM_startTimeout();">
 </map>
-</span>
 
-<!-- InstanceEnd -->
-</body></html>
+<!-- InstanceEnd --></body></html>
