sustainablebusiness.com (archived on 2009-06-16)
{
  "alexa_rank": 88868,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 10856,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.43,
  "homepage_snapshot_redirected_domain": "sustainablebusiness.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090330051733id_/http://www.sustainablebusiness.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090330051733id_/http%3A//sustainablebusiness.com",
  "interval": "2009_A",
  "link_text": "privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "sustainablebusiness.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616064834id_/http%3A//www.sustainablebusiness.com/index.cfm/go/info.privacypolicy",
  "policy_title": "SustainableBusiness.com",
  "policy_url": "sustainablebusiness.com/index.cfm/go/info.privacypolicy",
  "sha1": "293785c3ba6d98779d0638a0cb75bd58de3e802e",
  "simhash": 15890706842686248164,
  "simhash_updated": true,
  "site_hostname": "sustainablebusiness.com",
  "site_url": "http://sustainablebusiness.com",
  "smog": 14.79,
  "strict_updated": true,
  "timestamp": "20090616064834",
  "word_count": 1789,
  "year": 2009
}

--- a/s/su/sus/sustainablebusiness.com.html
+++ b/s/su/sus/sustainablebusiness.com.html
@@ -1,22 +1,26 @@
-<!--The following is the downloaded HTML source of the sustainablebusiness.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216022231id_/http%3A//sustainablebusiness.com/index.cfm/go/info.privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sustainablebusiness.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616064834id_/http%3A//www.sustainablebusiness.com/index.cfm/go/info.privacypolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html><head>
 		<title>SustainableBusiness.com</title>
 		<meta name="description" content="Online community for green business: Green Dream Jobs, Progressive Investor, Renewable Energy stocks, Healthy Living stocks, Green Capital, daily sustainable business and investor news.">
-		<meta name="keywords" content="green, sustainable business, green business, green investing, green jobs, green careers, environmental careers, environmental jobs, green building, social investing, socially responsible investing, green capital, green venture capital, environmental business practices, business and environment, renewable energy, clean energy, clean tech, clean technology, socially responsible business, climate change, solar energy, sustainability, environmental management, eco-efficiency, wind energy, green building, natural foods, environment, organic foods, green power, industrial ecology, waste management, recycle, recycling, composting, sustainable development, fuel cells, global warming, energy efficiency, corporate social responsibility, corporate reporting, environmental news service, environmentally preferable products,green design, green power, industrial ecology, pollution">
+		<meta name="keywords" content="green business, greentech, cleantech, clean technology, green technology,sustainable business, renewable energy, clean energy, green investing, greenjobs, green careers, environmental careers, environmental jobs, cleantechjobs, green building, green capital, green venture capital, climate change,global warming, solar energy, wind energy, geothermal energy, wave energy,tidal energy, energy efficiency, sustainability, sustainable agriculture,organic industry, recycle, recycling, composting, sustainable development,corporate social responsibility, sustainability reports">
+			
 		<meta name="verify-v1" content="ImtOWcqXM/jd+ZSSPkV4Ogq3MaXDAiW49pcIkBv1sT4=">
 		<link rel="alternate" type="application/rss+xml" title="Sustainable Business News" href="http://www.sustainablebusiness.com/index.cfm/go/rss.generalnews">
 		<link rel="alternate" type="application/rss+xml" title="Sustainable Investor News" href="http://www.sustainablebusiness.com/index.cfm/go/rss.investornews">
 		<link rel="alternate" type="application/rss+xml" title="Green Dream Jobs" href="http://www.sustainablebusiness.com/index.cfm/go/rss.greendreamjobs">
 		
-<!-- START external javascript -->
+
 
 	<script src="/_assets/js/site-section.js" type="text/javascript" language="javascript"></script>
 
-<!-- END external javascript -->
 
-<!-- START external stylesheets -->
+<script src="/_assets/js/utilities.js" type="text/javascript" language="javascript"></script>
+<script src="/_assets/js/fixColdfusionAjax.js" type="text/javascript" language="javascript"></script>
+
+
+
 <link href="/_assets/css/styles.css" rel="stylesheet" type="text/css">
 <link href="/_assets/css/site.css" rel="stylesheet" type="text/css">
 
@@ -24,10 +28,34 @@
 
 	<link href="/_assets/css/site-section-info.css" rel="stylesheet" type="text/css">
 
-<!-- END external stylesheets -->
+
+
+<!-- PUT THIS TAG IN THE head SECTION -->
+<script type="text/javascript" src="http://partner.googleadservices.com/gampad/google_service.js">
+</script>
+<script type="text/javascript">
+  GS_googleAddAdSenseService("ca-pub-8704410470036300");
+  GS_googleEnableAllServices();
+</script>
+<script type="text/javascript">
+  GA_googleAddSlot("ca-pub-8704410470036300", "AboveFold728x60");
+  GA_googleAddSlot("ca-pub-8704410470036300", "Right120x600");
+  GA_googleAddSlot("ca-pub-8704410470036300", "Right160x600");
+  GA_googleAddSlot("ca-pub-8704410470036300", "Content300x250");
+</script>
+<script type="text/javascript">
+  GA_googleFetchAds();
+</script>
+<!-- END OF TAG FOR head SECTION -->
 
 	</head>
 	<body style="background:#e6e6e6; margin:0; padding:0; text-align:center;">
+	
+	<div align="center">
+	<script type="text/javascript">
+  GA_googleFillSlot("AboveFold728x60");
+</script>
+	 </div>
 		<table border="0" cellspacing="0" cellpadding="0" style="table-layout:fixed; border-collapse:collapse; empty-cells:show; width:990px; margin:0 auto; border:0; background:#369; text-align:left;">
 			<tbody><tr>
 				<td style="width:55px; height:55px; background:transparent url('/_assets/images/templates/site-bg-nw.png') left top no-repeat;"></td>
@@ -93,26 +121,31 @@
 		<div class="dropdown-menu">
 			<a class="dropdown-child" href="/index.cfm/go/news.general">Daily News</a>
 			<a class="dropdown-child" href="/index.cfm/go/news.investor">Investor News</a>
+			<a class="dropdown-child" href="/index.cfm/go/news.viewpressreleaselist">SB Newswire</a>
+			<a class="dropdown-child" href="/index.cfm/go/news.features">Feature Articles</a>
+			<a class="dropdown-child" href="/index.cfm/go/news.podcasts">Podcasts</a>
 			<a class="dropdown-child" href="/index.cfm/go/news.csrwire">CSRwire</a>
 			<a class="dropdown-child" href="/index.cfm/go/news.prnewswire">PR Newswire</a>
-			<a class="dropdown-child" href="/index.cfm/go/news.features">Feature Articles</a>
 			<a class="dropdown-child" href="/index.cfm/go/info.contentpartners">Content Partners</a>
 		</div>
 	</div>
 </td>
 <td style="">
 	<div class="dropdown-container">
-		<a class="dropdown-item" href="/index.cfm/go/progressiveinvestor.main">progressive investor</a>
+		<a class="dropdown-item" href="/index.cfm/go/progressiveinvestor.main">green investing</a>
 		<div class="dropdown-menu">
-			<a class="dropdown-child" href="/index.cfm/go/progressiveinvestor.about">About PI</a>
-			<a class="dropdown-child" href="/index.cfm/go/progressiveinvestor.faq">FAQs</a>
-			<a class="dropdown-child" href="/index.cfm/go/progressiveinvestor.current">Current Issue</a>
-			<a class="dropdown-child" href="/index.cfm/go/progressiveinvestor.list">Back Issues</a>
-			<a class="dropdown-child" href="/index.cfm/go/progressiveinvestor.stocks">Sustainable Stocks</a>
-			<a class="dropdown-child" href="/index.cfm/go/progressiveinvestor.sb20p1">SB20</a>
-			<a class="dropdown-child" href="/index.cfm/go/progressiveinvestor.testimonials">Testimonials</a>
+			<a class="dropdown-child" href="/index.cfm/go/progressiveinvestor.about">Progressive Investor</a>
+			<a class="dropdown-child" href="/index.cfm/go/progressiveinvestor.faq">&nbsp;&nbsp;&nbsp;FAQs</a>
+			<a class="dropdown-child" href="/index.cfm/go/progressiveinvestor.current">&nbsp;&nbsp;&nbsp;Current Issue</a>
+			<a class="dropdown-child" href="/index.cfm/go/progressiveinvestor.list">&nbsp;&nbsp;&nbsp;Back Issues</a>
+			<a class="dropdown-child" href="/index.cfm/go/progressiveinvestor.sb20p1">&nbsp;&nbsp;&nbsp;SB20</a>
+			<a class="dropdown-child" href="/index.cfm/go/progressiveinvestor.testimonials">&nbsp;&nbsp;&nbsp;Testimonials</a>
+			<a class="dropdown-child" href="/index.cfm/go/progressiveinvestor.subscribe">&nbsp;&nbsp;&nbsp;Subscribe Now</a>
+			<a class="dropdown-child" href="/index.cfm/go/progressiveinvestor.egsabout">Emerging Green Stocks</a>
+			<a class="dropdown-child" href="/index.cfm/go/progressiveinvestor.egsservice">&nbsp;&nbsp;&nbsp;Services</a>
+			<a class="dropdown-child" href="/index.cfm/go/progressiveinvestor.egstocks">&nbsp;&nbsp;&nbsp;Featured Companies</a>
+			<a class="dropdown-child" href="/index.cfm/go/progressiveinvestor.stocks">Green Stock Watch</a>
 			<a class="dropdown-child" href="/index.cfm/go/progressiveinvestor.pressreleases">Press Releases</a>
-			<a class="dropdown-child" href="/index.cfm/go/progressiveinvestor.subscribe">Subscribe Now</a>
 		</div>
 	</div>
 </td>
@@ -124,7 +157,6 @@
 			<a class="dropdown-child" href="/index.cfm/go/greendreamjobs.main">View Jobs</a>
 			<a class="dropdown-child" href="/index.cfm/go/greendreamjobs.post">Post Your Job</a>
 			<a class="dropdown-child" href="/index.cfm/go/greendreamjobs.prices">Prices</a>
-			<a class="dropdown-child" href="/index.cfm/go/greendreamjobs.advancedsearch">Advanced Search</a>
 		</div>
 	</div>
 </td>
@@ -331,10 +363,6 @@
 	<p>(<a href="/index.cfm/go/newsletter.sample" target="_blank">view sample issue</a>)</p>
 </form>
 
-
-<p>
-
-</p>
 <!-- END forms -->
 
 				</div>
@@ -402,10 +430,12 @@
 
 <!-- BEGIN page sidebars -->
 
-	<div class="container" style="padding:10px 0;border-top:solid #468d2d 1px;border-bottom:solid #468d2d 1px;width:100%;text-align:center">
-		
-	</div>
 
+<div align="center">
+<script type="text/javascript">
+  GA_googleFillSlot("Right160x600");
+</script> 
+</div> 
 <!-- END page sidebars -->
 
 							</div>
@@ -442,6 +472,11 @@
 				<td style="background:transparent url('/_assets/images/templates/site-bg-se.png') right bottom no-repeat;"></td>
 			</tr>
 		</tbody></table>
+
+
+		
+		
+		
 		<div id="site-foot-nav-secondary" style="position:relative; top:-10px; text-align:center;">
 		
 <!-- START bottom secondary navigation -->
@@ -450,12 +485,31 @@
 |<a href="/index.cfm/go/info.contactus">contact us</a>
 |<a href="/index.cfm/go/info.advertise">advertise</a>
 |<a href="/index.cfm/go/info.privacypolicy">privacy policy</a>
+|<a href="/index.cfm/go/progressiveinvestor.disclosure">disclosure</a>
 <!-- END bottom secondary navigation -->
+
 		
-		</div>
+	
+	
+		</div>	
 		<div id="site-foot-copyright" style="position:relative; text-align:center;">
-			© 2008 Sustainable Business.com. All Rights Reserved.
+			© 2009 Sustainable Business.com. All Rights Reserved.
 		</div>
+		<p>
+		
+		</p>
+		<!-- Start Quantcast tag -->
+<script type="text/javascript">
+_qoptions={
+qacct:"p-994INKXwb0ms-"
+};
+</script>
+<script type="text/javascript" src="//secure.quantserve.com/quant.js"></script>
+<noscript>
+<img src="//secure.quantserve.com/pixel/p-994INKXwb0ms-.gif" style="display: none;" border="0" height="1" width="1" alt="Quantcast"/>
+</noscript>
+<!-- End Quantcast tag -->
+		
 		<script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
