nppa.org (archived on 2009-06-16)
{
  "alexa_rank": 62101,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 8296,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.37,
  "homepage_snapshot_redirected_domain": "nppa.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090331212123id_/http://nppa.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090331212123id_/http%3A//nppa.org",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "nppa.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616064853id_/http%3A//nppa.org/about_us/policies/privacy.html",
  "policy_title": "NPPA: Privacy Policy",
  "policy_url": "nppa.org/about_us/policies/privacy.html",
  "sha1": "9bd5a144ed196c917c2f21c295efe8409ef2e90f",
  "simhash": 14833553156803715750,
  "simhash_updated": false,
  "site_hostname": "nppa.org",
  "site_url": "http://nppa.org",
  "smog": 13.35,
  "strict_updated": false,
  "timestamp": "20090616064853",
  "word_count": 1355,
  "year": 2009
}

--- a/n/np/npp/nppa.org.html
+++ b/n/np/npp/nppa.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nppa.org privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216084952id_/http%3A//www.nppa.org/about_us/policies/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nppa.org privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616064853id_/http%3A//nppa.org/about_us/policies/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/About Us.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="doctitle" -->
@@ -22,7 +22,7 @@
 <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 <body>
-<div id="banner"><a href="/"><img src="http://www.nppa.org/assets/images/nppa-60a.gif" height="60" width="60" alt="NPPA"></a>
+<div id="banner"><a href="/"><img src="/assets/images/nppa-60a.gif" height="60" width="60" alt="NPPA"></a>
 <div id="skipNav"><a href="/help/">Help</a> <a href="https://www.nppa.org/store/">Store</a> <a href="/login/" class="login">Login</a></div>
 <h1>National Press Photographers Association</h1>
 </div>
@@ -261,6 +261,16 @@
     <a href="/help/">Problems with the website?</a>&nbsp;&nbsp;&nbsp;&nbsp; 
   </p>
 </div><!-- end footer div -->
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-8756665-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
+
 
 <!-- InstanceEnd -->
 </body></html>
