drugpolicy.org (archived on 2009-06-16)
{
  "alexa_rank": 138756,
  "analysis_subcorpus": true,
  "categories": "drugs;education",
  "char_count": 5756,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.4,
  "homepage_snapshot_redirected_domain": "drugpolicy.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090401165618id_/http://www.drugpolicy.org/homepage.cfm",
  "homepage_snapshot_url": "https://web.archive.org/web/20090401165603id_/http%3A//drugpolicy.org",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "drugpolicy.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616065310id_/http%3A//www.drugpolicy.org/privacy",
  "policy_title": "Drug Policy Alliance Privacy Policy:",
  "policy_url": "drugpolicy.org/privacy",
  "sha1": "ba42eb21c99cc578c424111f97cb7d89d94018a3",
  "simhash": 7017365148797847289,
  "simhash_updated": false,
  "site_hostname": "drugpolicy.org",
  "site_url": "http://drugpolicy.org",
  "smog": 14.17,
  "strict_updated": false,
  "timestamp": "20090616065310",
  "word_count": 915,
  "year": 2009
}

--- a/d/dr/dru/drugpolicy.org.html
+++ b/d/dr/dru/drugpolicy.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the drugpolicy.org privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216104110id_/http%3A//www.drugpolicy.org/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the drugpolicy.org privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616065310id_/http%3A//www.drugpolicy.org/privacy) for the most accurate reproduction.-->
 
 <html><head>
 <title>Drug Policy Alliance Privacy Policy:</title>
@@ -259,10 +259,7 @@ if  (!emailValidate(_CF_this, _CF_this.email, _CF_this.email.value))
 		
 	<tr>
 		<td>
-		<p><br>
-<a href="http://www.drugpolicyevent.com/index.php?option=com_content&amp;task=view&amp;id=33" target="_blank"><img alt="NYAM Right Side button" src="/images/nyam_button.jpg" border="0"></a><br>
-<br>
-<a href="http://www.drugpolicyevent.com/index.php?option=com_content&amp;task=view&amp;id=34" target="_blank"><img alt="Conference 2009" src="/images/conf_09button.jpg" border="0"></a></p>
+		<p><a href="http://www.reformconference.org/" target="_blank"><img alt="Reform Conf 2009 " src="/images/DPA_conf_web_button_v2.jpg" border="0"></a></p>
 
 		</td>
 	</tr>
@@ -507,7 +504,7 @@ We may amend this privacy policy from time to time. We will post electronic anno
 	<td colspan="6" bgcolor="#F2BC07" class="footer" valign="middle" height="25" align="center"> 
 	  <table width="720" border="0" cellpadding="0" cellspacing="0">
 		<tbody><tr> 
-		  <td> Copyright ©2008 DPA Network. All Rights Reserved 
+		  <td> Copyright ©2009 DPA Network. All Rights Reserved 
 		  </td>
 		  <td align="right"><a href="mailto:webmaster@drugpolicy.org" class="footer">Contact 
 			Webmaster</a> | <a href="/privacy/" class="footer">Privacy Policy</a> 
